Fixed row padding on mobile.

--- a/css/project-xyz.css
+++ b/css/project-xyz.css
@@ -68,6 +68,11 @@ body {
     }
 
     .row > div {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .container > .row {
         padding-left: 5vw;
         padding-right: 5vw;
     }
